--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="color" id="root"></section>
+    <section id="root"></section>
+    <section id="toDoList"></section>
 </body>
 </html>
