--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <section id="root"></section>
-    <canvas id="game"></canvas>
+    <canvas style="border: 1px solid red" id="game"></canvas>
 </body>
 </html>
